Upgrade to testng7.5 (#43)
* Uograded the testNG version to 7.5
* First working solution for #41 & #39
* Removed SkipExcepttion in the onStarTest listener method
* Made MergedReportData public since it was inaccessible from dependant projects
* Changing the compile version back to 8
* separating the PR analysis from the deployment
* Adapted the target release to java 1.8
* #45 solved issue with dealing with retry. If we are in a retry, we do not block the flow
* Added nested test cases
* Added and regrouped the nested tests
* Added nested cross phase tests
* Filled coverage
* Updated the README to reflect nested classes
* Fixed issue #46 Removing deprecate methods
* Updated readme and added data providers for nested classes
* Made a skip message more clear
* added Quality Gate
* Fixed #53 added a test case to cover the effects of Before/after phases on normal tests